@@ -12,6 +12,8 @@ USER LEVEL CHANGES
 
 -- Indexing of vectors, matrices and arrays can now use arbitrary numeric (with integer contents) and logical vectors.
 
+-- Added inverse-gamma distribution to NIMBLE's provided distributions.
+
 -- dim() now returns an integer vector.  It is not limited to uses like dim(x)[i].
 
 -- Updates to MCMC configuration API.  Member methods conf$addMonitors() and conf$addMonitors2() now accept argument ..., allowing multiple monitors to be added using the syntax conf$addMonitors('x', 'y', 'z').  Introduced a new member method, conf$printMonitors(), which nicely prints the current MCMC monitors.  This takes the place of the former method conf$getMonitors().  Now, conf$getMonitors() returns a character vector of the MCMC monitors, and the new method conf$getMonitors2() returns a character vector of the MCMC monitors2 field.
